--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,7 @@
     ec = config --global -e
     up = !git pull --rebase --prune $@ && git submodule update --init --recursive
     cob = checkout -b
+    cot = checkout -t
     cm = !git add -A && git commit -m
     save = !git add -A && git commit -m 'SAVEPOINT'
     undo = reset HEAD~1 --mixed
@@ -16,7 +17,7 @@
     wipe = !git add -A && git commit -qm 'WIPE SAVEPOINT' && git reset HEAD~1 --hard
     atop = !git fetch upstream && git rebase upstream/develop
 [push]
-    default = nothing
+	default = current
 [commit]
     template = commitTemplate.txt
 [filter "lfs"]
