--- a/.gitconfig
+++ b/.gitconfig
@@ -11,7 +11,7 @@
     cob = checkout -b
     cot = checkout -t
     cm = !git add -A && git commit -m
-    save = !git add -A && git commit -m 'SAVEPOINT'
+    save = !git add -A && git commit -m 'chore(save): save checkpoint'
     undo = reset HEAD~1 --mixed
     amend = commit -a --amend
     wipe = !git add -A && git commit -qm 'WIPE SAVEPOINT' && git reset HEAD~1 --hard
